[package]
name = "utd"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Create and manage activities and notes offline in your terminal"
readme = "README.md"
homepage = "https://github.com/kawaki-san/ugly-todo-rs"
repository = "https://github.com/kawaki-san/ugly-todo-rs"
keywords = ["kanban","todo","notes","tasks","minimal"]
categories = ["command-line-utilities", "visualization"]
authors = ["Kawaki <dev@kanjala.com>"]

[dependencies]
clap = { version = "3.1.6", features = [ "derive", "cargo" ] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2.1"
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
regex = "1.5.5"
term-table = "1.3.2"
ansi_term = "0.12.1"
rand = "0.8.5"
toml = "0.5.8"

[target.'cfg(unix)'.dependencies]
xdg = "2.4.1"
